--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+.idea
 # C extensions
 *.so
 
@@ -20,8 +20,11 @@ parts/
 sdist/
 var/
 wheels/
+released/
+resourse/
 pip-wheel-metadata/
-big.py
+text.py
+other/big.py
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -120,7 +123,6 @@ venv.bak/
 
 # mkdocs documentation
 /site
-
 # mypy
 .mypy_cache/
 .dmypy.json
@@ -128,3 +130,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/released/
